tests/errors/argument-count-mismatch.spcasm
macro takes_one(one)
endmacro

%takes_one(1, 2)
